--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,9 @@ html {
 .prose .anchor {
 	@apply absolute invisible no-underline;
 
-	margin-left: -1em;
+	margin-left: -0.75em;
 	padding-right: 0.5em;
-	width: 80%;
+	width: 100%;
 	max-width: 700px;
 	cursor: pointer;
 }
@@ -26,11 +26,11 @@ html {
 }
 
 .prose a {
-	@apply transition-all decoration-neutral-400 dark:decoration-neutral-600 underline-offset-2 decoration-[0.1em];
+	@apply transition-all decoration-neutral-400 dark:decoration-neutral-600 underline-offset-2 decoration-[0.1em] text-gray-300;
 }
 
 .prose .anchor:after {
-	@apply text-neutral-300 dark:text-neutral-700;
+	@apply text-neutral-300 dark:text-neutral-400;
 	content: '#';
 }
 
@@ -43,11 +43,11 @@ html {
 }
 
 .prose code {
-	@apply text-neutral-800 dark:text-neutral-200 px-1 py-0.5 border border-neutral-100 dark:border-neutral-800 rounded-lg bg-neutral-100 dark:bg-neutral-900;
+	@apply text-neutral-400 dark:text-neutral-200 px-1 py-0.5 border border-neutral-100 dark:border-neutral-800 rounded-lg bg-neutral-100 dark:bg-neutral-900;
 }
 
 .prose pre code {
-	@apply text-neutral-800 dark:text-neutral-200 p-0;
+	@apply text-neutral-400 dark:text-neutral-200 p-0;
 	border: initial;
 }
 
@@ -115,7 +115,7 @@ table {
 	width: 1rem;
 	margin-right: 1rem;
 	text-align: right;
-	color: gray;
+	color: ghostwhite;
 }
 [data-rehype-pretty-code-fragment] .line--highlighted {
 	@apply bg-slate-500 bg-opacity-10;
