--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,10 @@ html {
 	min-width: 360px;
 }
 
+.secret-sections {
+	@apply p-4 m-2 rounded-md shadow-md bg-[#FFFAF0] dark:bg-neutral-900;
+}
+
 .prose .anchor {
 	@apply absolute invisible no-underline;
 
