--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,10 @@ html {
 	min-width: 360px;
 }
 
+.hash {
+	@apply m-1 px-1 py-px rounded-md shadow-md font-semibold font-mono tracking-wider bg-[#FFFAF0] dark:bg-neutral-800/80;
+}
+
 .secret-sections {
 	@apply p-4 m-2 rounded-md shadow-md bg-[#FFFAF0] dark:bg-neutral-900;
 }
